# poe

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  mise.toml
apps/: Cargo.toml
apps/myoslib/: Cargo.toml
boot/: cdboot.asm  fdboot.asm  fdipl.asm  fmcdboot.asm  loader.asm  osldr.asm  osz.inc  stage2.asm
boot/pc-bios/: loader.asm
common/toeboot/: Cargo.toml
lib/: Cargo.toml
lib/acpi/: Cargo.toml
lib/acpi/src/: bgrt.rs  dsdt.rs  lib.rs  madt.rs  tables.rs
lib/bootprot/: Cargo.toml
lib/bootprot/src/: lib.rs
lib/edid/: Cargo.toml
lib/edid/src/: lib.rs
lib/elf/: Cargo.toml
lib/fdt/: Cargo.toml
lib/fdt/src/: lib.rs
lib/guid/: Cargo.toml
lib/guid/src/: lib.rs
lib/hid/: Cargo.toml
lib/hid/src/: hid.rs  lib.rs
lib/mar/: Cargo.toml
lib/megstd/src/: lib.rs  sys.rs
lib/megstd/src/drawing/: bitmap.rs
lib/megstd/src/io/: error.rs  mod.rs
lib/minilib/: Cargo.toml
lib/minilib/src/: fixedvec.rs  lib.rs  rand.rs  unknown_enum.rs
lib/myosabi/src/: svc.rs  svc.txt
lib/sbi/: Cargo.toml
lib/sbi/src/: lib.rs
lib/simple_font/: Cargo.toml
lib/simple_font/font_macro/: Cargo.toml
lib/simple_font/font_macro/src/: lib.rs
lib/simple_font/src/: lib.rs  mapping.rs
lib/smbios/: Cargo.toml
lib/smbios/src/: lib.rs
lib/src/: env.rs
lib/src/arch/: hal.rs  mod.rs
lib/src/arch/aarch64/: mod.rs
lib/src/arch/riscv/: csr.rs  hal_riscv.rs  mod.rs
lib/src/arch/spinlock/: aa64.rs  spinlock.rs  x86.rs
lib/src/arch/x86/: bits.rs  cpu.rs  hal_x86.rs  lomem.rs  mod.rs  setjmp.rs  vm86.rs
lib/src/io/: media.rs  mod.rs  tty.rs
lib/src/io/tty/: vt100.rs
lib/src/mem/: global_alloc.rs  mm.rs  mod.rs
lib/src/platform/: mod.rs
lib/src/platform/rpi/: fb.rs  mod.rs  uart0.rs  uart1.rs
lib/src/platform/rv_sbi/: mod.rs  sbi_console.rs
lib/src/platform/x86_pc/: mod.rs  pic.rs  pit.rs
lib/src/platform/x86_pc/fm_towns/: fmt_kbd.rs  fmt_text.rs  mod.rs
lib/src/platform/x86_pc/ibm_pc/: cga_text.rs  disk_bios.rs  mod.rs
lib/src/platform/x86_pc/nec98/: bios.rs  mod.rs  pc98_text.rs
lib/src/sync/: spin.rs
lib/toeboot/src/: lib.rs
lib/tui/src/: buffer.rs  color.rs  coord.rs  fixed_str.rs  lib.rs
lib/uuid/: Cargo.toml
lib/uuid/identify/: Cargo.toml
lib/uuid/identify/src/: lib.rs
lib/uuid/src/: lib.rs
lib/wasm/: README.md
lib/wasm/src/: intcode.rs  stack.rs  wasm.rs  wasmintr.rs
lib/x86/: Cargo.toml
lib/x86/src/: cr.rs  efer.rs  gpr.rs  isolated_io.rs  lib.rs  msr.rs  prot.rs  real.rs
minios/: Cargo.toml
minios/src/: env.rs  lib.rs
minios/src/arch/: hal.rs
minios/src/arch/aarch64/: hal_aa64.rs
minios/src/arch/riscv/: cpu.rs  csr.rs  hal_riscv.rs
minios/src/arch/spinlock/: mod.rs  x86_64.rs
minios/src/arch/x86/: bits.rs  cpu.rs  gdt.rs  hal_x86.rs  idt.rs  lomem.rs  mod.rs  setjmp.rs  vm86.rs
minios/src/io/: graphics.rs  mod.rs  tty.rs  tui.rs
minios/src/io/fonts/: mod.rs
minios/src/io/graphics/: color.rs  display.rs  fbcon.rs
minios/src/io/tty/: fbcon.rs  null.rs  vt100.rs
minios/src/mem/: global_alloc.rs  mm.rs  mmio.rs  mod.rs
minios/src/platform/: mod.rs
minios/src/platform/rpi/: fb.rs  gpio.rs  mbox.rs  mod.rs  uart0.rs
minios/src/platform/rv_sbi/: mod.rs
minios/src/platform/x86_pc/: mod.rs  pic.rs  pit.rs
minios/src/platform/x86_pc/fm_towns/: crtc.rs  fmt_kbd.rs  fmt_svga.rs  fmt_text.rs  mod.rs
minios/src/platform/x86_pc/ibm_pc/: bios.rs  cga_text.rs  mod.rs  uart.rs  vesa_bios.rs
minios/src/platform/x86_pc/nec98/: mod.rs  pc98_text.rs  pegc.rs
poe/arm64-rpi/: Makefile  README.md
poe/arm64-rpi/poe-rpi/: Cargo.toml
poe/arm64-rpi/poe-rpi/.cargo/: config.toml
poe/arm64-rpi/poe-rpi/src/: main.rs
poe/poe/: Cargo.toml
poe/poe/src/: lib.rs
poe/riscv-virt/: Makefile  README.md
poe/riscv-virt/poe-rv/: Cargo.toml
poe/riscv-virt/poe-rv/.cargo/: config.toml
poe/riscv-virt/poe-rv/src/: link.ld  main.rs
poe/x86-pc/: Makefile  README.md
poe/x86-pc/poe-x86/: Cargo.toml  i586-unknown-none.json
poe/x86-pc/poe-x86/.cargo/: config.toml
poe/x86-pc/poe-x86/src/: link.ld  main.rs
sys/: Cargo.toml  i586-unknown-none.json
sys/.cargo/: config  config.toml
sys/bootprot/: Cargo.toml
sys/kernel/: Cargo.toml  build.rs
tools/: Cargo.toml
tools/convert/: Cargo.toml
tools/convert/src/: ceef.rs  elf.rs  main.rs
tools/elf2ceef/: Cargo.toml
tools/elf2ceef/src/: ceef.rs  elf.rs  main.rs
tools/krnlconv/: Cargo.toml
tools/krnlconv/src/: ceef.rs  elf.rs  main.rs
tools/mkfdfs/: Cargo.toml
tools/mkfdfs/src/: fat.rs  main.rs
tools/mkinitrd/: Cargo.toml
tools/mkinitrd/src/: main.rs
tools/mkkrnimg/: Cargo.toml
tools/mkkrnimg/src/: main.rs
tools/wasm-strip/: Cargo.toml
tools/wasm-strip/src/: wasm.rs
(+77 files in other folders)
