[workspace]
members = [
  "elf2ceef",
  "mkfdfs",
  "mkinitrd",
  "mkkrnimg",
  "wasm-strip",
]
resolver = "3"

[workspace.dependencies]
compress = { git = "https://github.com/neri/compress.git" }
# compress = { path = "../../compress/" }

bitflags = { version = "2.9" }

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
