[package]
edition = "2024"
name = "poe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minios = { path = "../../minios/" }
fdt = { path = "../../lib/fdt/", features = ["guid"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
