[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2024"
name = "elf2ceef"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# compress = { git = "https://github.com/neri/compress.git" }
compress = { path = "../../../compress/" }
