[package]
edition = "2024"
name = "poe-rpi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poe = { path = "../../poe/" }
minios = { path = "../../../minios/", features = ["rpi", "device_tree"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
