[package]
edition = "2024"
name = "poe-rv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poe = { path = "../../poe/" }
libminios = { path = "../../../lib/", features = ["sbi", "device_tree"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
